<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/title_join"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFF" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/txtQuestion">

        <Button
            android:id="@+id/btnPlayer1"
            android:layout_width="130dp"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:alpha="0.5"
            android:text="@string/player1_name" />

        <Button
            android:id="@+id/btnPlayer2"
            android:layout_width="130dp"
            android:layout_height="100dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:alpha="0.5"
            android:text="@string/player2_name" />

        <Button
            android:id="@+id/btnPlayer3"
            android:layout_width="130dp"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:alpha="0.5"
            android:text="@string/player3_name" />

        <Button
            android:id="@+id/btnPlayer4"
            android:layout_width="130dp"
            android:layout_height="100dp"
            android:layout_alignBottom="@+id/btnPlayer1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:alpha="0.5"
            android:text="@string/player4_name" />

        <TextView
            android:id="@+id/txtAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="ANSWER"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFF"
            android:translationX="-200dp" />

        <Button
            android:id="@+id/btnStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_start" />


    </RelativeLayout>

</RelativeLayout>