<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    >

    <TextView
        android:id="@+id/txtAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFF"
        android:translationX="-200dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtTitlePart1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/game_title_part1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFF"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtTitlePart2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/game_title_part2"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFF"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="@string/title_start" />

    <Switch
        android:id="@+id/swSound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:switchPadding="5dp"
        android:text="@string/title_sound"
        android:textColor="#FFF" />
</RelativeLayout>
